# QuartzApp

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
Include/: Application.h  DLL.h  LogCallbacks.h  Surface.h  Window.h
Include/OpenGL/: GLApiSurface.h  GLSurface.h
Include/Vulkan/: VulkanApiSurface.h  VulkanSurface.h
Source/: Application.cpp  Log.cpp  Log.h  LogCallbacks.cpp  Window.cpp
Source/GLFW/: GLFWApplication.cpp  GLFWApplication.h  GLFWCallbacks.cpp  GLFWCallbacks.h  GLFWHelper.cpp  GLFWHelper.h  GLFWRegistry.cpp  GLFWRegistry.h  GLFWWindow.cpp  GLFWWindow.h
Source/OpenGL/: GLApiSurface.cpp  GLSurface.cpp
Source/Vulkan/: VulkanApiSurface.cpp  VulkanSurface.cpp
Source/Windows/: WinApi.h  WinApiApplication.cpp  WinApiApplication.h  WinApiHelper.cpp  WinApiHelper.h  WinApiRegistry.cpp  WinApiRegistry.h  WinApiWindow.cpp  WinApiWindow.h
